<resources>
    <string name="app_name">Daily delicious dishes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_frag_1">Home</string>
    <string name="title_frag_2">Stewed dishes</string>
    <string name="title_frag_3">Soups</string>
    <string name="title_frag_4">Fried and stir-fried dishes</string>
    <string name="title_frag_5">Cakes</string>
    <string name="suggested">Suggested dishes</string>
    <string name="version">Version 1.0</string>
    <string name="dev">Developed by Phoenix</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-9164465649979150/5444762670</string>

</resources>
